[package]
name = "blank_slate_battery"
version = "0.1.0"
authors = ["Alexander K <sowcow@pm.me>"]
edition = "2018"

[lib]
crate-type = ["cdylib", "rlib"]

# [features]
# default = ["console_error_panic_hook"]
#
[dependencies]
wasm-bindgen = "0.2.91"
serde = { version = "1.0.160", features = ["derive"] }
serde-wasm-bindgen = "0.6.3"
serde_bytes = "0.11.9"
# verison that supports making links between pages:
printpdf = { git = "https://github.com/chipsenkbeil/printpdf" }
chrono = "0.4"


# The `console_error_panic_hook` crate provides better debugging of panics by
# logging them with `console.error`. This is great for development, but requires
# all the `std::fmt` and `std::panicking` infrastructure, so isn't great for
# code size when deploying.
# console_error_panic_hook = { version = "0.1.7", optional = true }

[dev-dependencies]
wasm-bindgen-test = "0.3.34"

[profile.release]
# Tell `rustc` to optimize for small code size.
opt-level = "s"
